MODON MRE BPDEV/force-app/main/default/objects/Business_Process_Step_Time_Log__c/Business_Process_Step_Time_Log__c.object-meta.xml
<CustomObject>
    <label>Business Process Step Time Log</label>
    <nameField>
        <displayFormat>BPSTL-{0000}</displayFormat>
        <label>Business Process Step Time Log Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Business Process Step Time Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>