MODON MRE BPDEV/force-app/main/default/objects/Business_Process_Step_Time_Log__c/fields/Case__c.field-meta.xml
<CustomField>
    <fullName>Case__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Case</label>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>Business Process Step Time Logs</relationshipLabel>
    <relationshipName>Business_Process_Step_Time_Logs</relationshipName>
    <type>Lookup</type>
</CustomField>