MODON MRE BPDEV/force-app/main/default/objects/Business_Process_Step_Time_Log__c/fields/Current_End_Time__c.field-meta.xml
<CustomField>
    <fullName>Current_End_Time__c</fullName>
    <formula>IF( ISNULL(End_Time__c)  ,NOW(), End_Time__c   )</formula>
    <label>Current End Time</label>
    <type>DateTime</type>
</CustomField>