MODON MRE BPDEV/force-app/main/default/objects/Business_Process_Step_Time_Log__c/fields/New_Status__c.field-meta.xml
<CustomField>
    <fullName>New_Status__c</fullName>
    <label>New Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>open</fullName>
            </value>
            <value>
                <fullName>Not Actioned</fullName>
            </value>
            <value>
                <fullName>Completed</fullName>
            </value>
            <value>
                <fullName>Rejected</fullName>
            </value>
            <value>
                <fullName>Accepted</fullName>
            </value>
            <value>
                <fullName>Required Info</fullName>
            </value>
            <value>
                <fullName>Provided Info</fullName>
            </value>
            <value>
                <fullName>Re Open</fullName>
            </value>
            <value>
                <fullName>Draft</fullName>
            </value>
            <value>
                <fullName>Pending for Accounts Approval</fullName>
            </value>
            <value>
                <fullName>Pending for Collections Approval</fullName>
            </value>
            <value>
                <fullName>Pending for Audit Approval</fullName>
            </value>
            <value>
                <fullName>Rejected by Accounts</fullName>
            </value>
            <value>
                <fullName>Rejected by Collections</fullName>
            </value>
            <value>
                <fullName>Rejected by Audit</fullName>
            </value>
            <value>
                <fullName>Rejected by CRM Ops</fullName>
            </value>
            <value>
                <fullName>Pending with DLD for NOC Document Generation</fullName>
            </value>
            <value>
                <fullName>Approved by DLD</fullName>
            </value>
            <value>
                <fullName>Rejected by Accounts and Pending with CRM Ops</fullName>
            </value>
            <value>
                <fullName>NOC Document Signature is in progress</fullName>
            </value>
            <value>
                <fullName>NOC Released</fullName>
            </value>
            <value>
                <fullName>Pending with CRM Maker to generate TAA/TL document</fullName>
            </value>
            <value>
                <fullName>Pending with CRM Checker to review TAA/TL document</fullName>
            </value>
            <value>
                <fullName>Rejected by CRM Ops Maker</fullName>
            </value>
            <value>
                <fullName>Rejected by Checker and Pending with CRM Maker</fullName>
            </value>
            <value>
                <fullName>Pending with CRM Ops to Send TAA/TL to customer</fullName>
            </value>
            <value>
                <fullName>TAA Pending for Seller Signature</fullName>
            </value>
            <value>
                <fullName>TAA Signed by Seller Pending for Buyer Signature</fullName>
            </value>
            <value>
                <fullName>TAA Signed by Buyer Pending with CRMOps for Approval</fullName>
            </value>
            <value>
                <fullName>TAA Approved by CRMOps Pending with Authorized Signatory</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>