MODON MRE BPDEV/force-app/main/default/objects/Business_Process_Step_Time_Log__c/fields/Old_Status__c.field-meta.xml
<CustomField>
    <fullName>Old_Status__c</fullName>
    <label>Old Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Open</fullName>
            </value>
            <value>
                <fullName>Not Actioned</fullName>
            </value>
            <value>
                <fullName>Completed</fullName>
            </value>
            <value>
                <fullName>Rejected</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>