MODON MRE BPDEV/force-app/main/default/objects/Business_Process_Step_Time_Log__c/fields/remainderDateTime2__c.field-meta.xml
<CustomField>
    <fullName>remainderDateTime2__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>remainderDateTime2</label>
    <type>DateTime</type>
</CustomField>