MODON MRE BPDEV/force-app/main/default/objects/Business_Process_Step_Time_Log__c/fields/remainderDateTime3__c.field-meta.xml
<CustomField>
    <fullName>remainderDateTime3__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>remainderDateTime3</label>
    <type>DateTime</type>
</CustomField>