MODON MRE BPDEV/force-app/main/default/objects/Business_Process_Step_Time_Log__c/fields/Start_time__c.field-meta.xml
<CustomField>
    <fullName>Start_time__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Start time</label>
    <type>DateTime</type>
</CustomField>