MODON MRE BPDEV/force-app/main/default/objects/Business_Process_Step_Time_Log__c/fields/Step_Assigned_User__c.field-meta.xml
<CustomField>
    <fullName>Step_Assigned_User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Step Assigned User</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Business_Process_Step_Time_Logs</relationshipName>
    <type>Lookup</type>
</CustomField>