MODON MRE BPDEV/force-app/main/default/objects/Business_Process_Step_Time_Log__c/fields/Time_Spent_Days__c.field-meta.xml
<CustomField>
    <fullName>Time_Spent_Days__c</fullName>
    <formula>Current_End_Time__c -  Start_time__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Time Spent Days</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>