MODON MRE BPDEV/force-app/main/default/objects/Business_Process_Step_Time_Log__c/fields/Time_Spent_HH_MM__c.field-meta.xml
<CustomField>
    <fullName>Time_Spent_HH_MM__c</fullName>
    <formula>TEXT(FLOOR((Current_End_Time__c - Start_time__c) * 24)) &amp; &quot;:&quot; &amp;
IF(
MOD(FLOOR((Current_End_Time__c - Start_time__c) * 1440), 60) &lt; 10,
&quot;0&quot; &amp; TEXT(MOD(FLOOR((Current_End_Time__c - Start_time__c) * 1440), 60)),
TEXT(MOD(FLOOR((Current_End_Time__c - Start_time__c) * 1440), 60))
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Time Spent (HH:MM)</label>
    <type>Text</type>
</CustomField>