MODON MRE BPDEV/force-app/main/default/objects/Business_Process_Step_Time_Log__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Business_Process_Step__c</columns>
    <columns>Business_Process__c</columns>
    <columns>New_Status__c</columns>
    <columns>Start_time__c</columns>
    <columns>End_Time__c</columns>
    <columns>Step_Assigned_User__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>