MODON MRE BPDEV/force-app/main/default/objects/Business_Process_Step_Time_Log__c/listViews/Handover_Queue_Business_Process_Step_Time_Log.listView-meta.xml
<ListView>
    <fullName>Handover_Queue_Business_Process_Step_Time_Log</fullName>
    <filterScope>Queue</filterScope>
    <label>Handover Queue</label>
    <queue>Handover_Queue</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>